# Media-Communications-Mesh

./: .actionlint.yaml  .actionlintrc.yaml  .clang-format  .dockerignore  .gitignore  .gitmodules  ATTRIBUTION.md  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING  CONTRIBUTING.md  CPPLINT.cfg  LICENSE  LICENSE.md  README.md  build.sh  build_dep.sh  build_docker.sh  common.sh  format-coding.sh  index.rst  install_dependencies.sh  test.sh  versions.env
control-plane-agent/: CMakeLists.txt  README.md  go.mod  go.sum
control-plane-agent/api/control-plane/: bridge.go  conn.go  control-plane.go  control-plane_test.go  media-proxy.go  multipoint-group.go
control-plane-agent/api/proxy/: proxy.go  proxy_test.go
control-plane-agent/api/pulse/: bridge.go  colorized.go  conn.go  media-proxy.go  multipoint-group.go  output.go  pulse.go
control-plane-agent/cmd/mesh-agent/: mesh-agent.go
control-plane-agent/docs/: MCM-CONTROL-PLANE-API-DEFINITION.md  MEDIA-PROXY-CONTROL-API-DIAGRAMS.md
control-plane-agent/internal/: agent.go  mcm-version.go.in
control-plane-agent/internal/config/: verbose.go
control-plane-agent/internal/event/: events.go  params.go
control-plane-agent/internal/logic/: default.yaml  logic.go  logic_test.go  manifest.go
control-plane-agent/internal/model/: bridge.go  conn.go  model.go  multipoint-group.go  port-mask.go  proxy.go  sdk.go  time.go
control-plane-agent/internal/registry/: const.go  registry-bridge.go  registry-bridge_test.go  registry-conn.go  registry-conn_test.go  registry-media-proxy.go  registry-media-proxy_test.go  registry-multipoint.go  registry-multipoint_test.go  registry.go  registry_test.go
control-plane-agent/internal/telemetry/: metrics.go
control-plane-agent/internal/utils/: readiness.go  utils.go  utils_test.go
media-proxy/: CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  imtl.json  requirements.txt  versions.env
media-proxy/.github/workflows/: action.yml  build.yml
media-proxy/include/: api_server_grpc.h  api_server_tcp.h  app_platform.h  controller_server.h  libfabric_cq.h  libfabric_dev.h  libfabric_ep.h  libfabric_mr.h  mp_ctrl_proto.h  mtl.h  proxy_context.h  rdma_hmem.h  rdma_session.h  session-base.h  session-mtl.h  session-rdma.h  sessions.h  shm_memif.h  utils.h
media-proxy/include/mesh/: CONCEPT.md  CONN-RDMA.md  DEVELOPMENT.md  GENEVA-DEMO.md  HOW-TO-GUIDE.md  SDK_BRIDGE_PARAMS.md  ZERO-COPY.md  bridge_zc_wrap_rx.h  bridge_zc_wrap_tx.h  buf.h  client.h  client_api.h  client_registry.h  concurrency.h  conn.h  conn_local.h  conn_local_rx.h  conn_local_tx.h  conn_local_zc.h  conn_local_zc_wrap_rx.h  conn_local_zc_wrap_tx.h  conn_rdma.h  conn_rdma_rx.h  conn_rdma_tx.h  conn_registry.h  event.h  gateway_zc.h  logger.h  manager_bridges.h  manager_local.h  manager_multipoint.h  mesh_json_proxy.h  metrics.h  metrics_collector.h  mocked_bridge.h  multipoint.h  multipoint_copy.h  multipoint_zc.h  proxy_api.h  proxy_config.h  (+5 more)
media-proxy/protos/: controller.proto  mediaproxy.proto
media-proxy/src/: api_server_grpc.cc  api_server_tcp.cc  controller_server.cc  libfabric_cq.c  libfabric_dev.c  libfabric_ep.c  libfabric_ep.cc  libfabric_ep.old  libfabric_mr.c  librabric_ep.c  media_proxy.cc  mtl.c  proxy_context.cc  rdma_hmem.c  rdma_session.c  session-base.cc  session-mtl-st2110-20-rx.cc  session-mtl-st2110-20-tx.cc  session-mtl-st2110-20.cc  session-mtl-st2110-22 rx.cc  session-mtl-st2110-22-tx.cc  session-mtl-st2110-22.cc  session-mtl-st2110-30-rx.cc  session-mtl-st2110-30-tx.cc  session-mtl-st2110-30.cc  session-mtl.cc  session-rdma-rx.cc  session-rdma-tx.cc  session-rdma.cc  shm_memif.c  shm_memif_common.c  shm_memif_rdma.c  shm_memif_st20.c  shm_memif_st22.c  shm_memif_st30.c  shm_memif_st40.c  shm_memif_udp.c  tcp_controller.cc  udp_h264_rx_sample.c
media-proxy/src/mesh/: bridge_zc_wrap_rx.cc  bridge_zc_wrap_tx.cc  buf.cc  client_api.cc  client_registry.cc  concurrency.cc  conn.cc  conn_local.cc  (+32 more)
media-proxy/tests/: CMakeLists.txt  build.sh  common.h  conn_rdma_real_ep_test.cc  conn_rdma_rx_tests.cc  conn_rdma_test_mocks.cc  conn_rdma_test_mocks.h  conn_rdma_tests.cc  conn_rdma_tx_tests.cc  ffmpeg_test.sh  libfabric_cq_tests.cc  libfabric_dev_tests.cc  libfabric_dev_tests.h  libfabric_ep_tests.cc  libfabric_mocks.cc  libfabric_mocks.h  libfabric_mr_tests.cc  memif_test_rx.c  memif_test_tx.c  mesh_context_tests.cc  mesh_json_proxy_test.cc  mesh_tests.cc  metrics.h  rdma_rx_test.cpp  rdma_tx_test.cpp  st2110_tests.cc
sdk/: CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  build.sh  libmcm_dp.pc.in  libmcm_dp_dyn.pc.in  libmcm_dp_s.pc.in
sdk/cmake/: compile_options.cmake
sdk/ffmpeg_plugin/: 0001-mcm-add-device-patch.patch
sdk/include/: logger.h  mcm-version.h.in  mcm_dp.h  media_proxy_ctrl.h  memif_impl.h  mesh_buf.h  mesh_buf_memif.h  mesh_client.h  mesh_client_api.h  mesh_concurrency.h  mesh_conn.h  mesh_conn_memif.h  mesh_conn_zc.h  mesh_dp.h  mesh_dp_internal.h  mesh_dp_legacy.h  mesh_json.h  mesh_json_sdk.h  mesh_logger.h  mesh_sdk_api.h  udp_impl.h
sdk/samples/: CMakeLists.txt  ping_app.c  pingpong_common.c  pingpong_common.h  pong_app.c  recver_app.c  recver_app_json.c  rtsp_recver_app.c  sample_common.c  sender_app.c  sender_app_json.c
sdk/src/: impl_memif.c  impl_memif.h  impl_udp.c  impl_udp.h  logger.h  mcm_dp.c  media_proxy_ctrl.c  media_proxy_ctrl.h  memif_impl.c  mesh_buf.cc  mesh_client.cc  mesh_client_api.cc  mesh_concurrency.cc  mesh_conn.cc  mesh_conn_memif.cc  mesh_conn_zc.cc  mesh_dp.c  mesh_dp.cc  mesh_json.cc  mesh_json_sdk.cc  mesh_logger.cc  mesh_sdk_api.cc  udp_impl.c
sdk/tests/: CMakeLists.txt  mesh_dp_api_tests.cc  mesh_json_sdk_test.cc  mesh_json_test.cc  test_log.c
tests/unit/: CMakeLists.txt  media_proxy-session-tests.cc  mesh_dp_api_tests.cc  proxy_context_tests.cc
tests/validation/: .gitignore  CMakeLists.txt  README.md  app.c  app.h  common.c  conftest.py  graph.py  pytest.ini  recver_app.c  recver_val.c  requirements.txt  rx_app.c  sender_app.c  sender_val.c  settings.json  tx_app.c  video_common.c  video_recver_app.c  video_sender_app.c
(+377 files in other folders)
